<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="50px"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtName"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:height="65px"
            android:layout_marginTop="35px"
            >
        </EditText>

        <EditText
            android:id="@+id/txtSurname"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:height="65px"
            android:layout_marginTop="35px"
            >
        </EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:height="65px"
            android:layout_marginTop="35px"
            >
        </EditText>

        <EditText
            android:id="@+id/txtAge"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:height="65px"
            android:layout_marginTop="35px"
            >
        </EditText>

    </LinearLayout>

</ScrollView>